git-svn-id: https://unicode.org/repos/unicodetools/trunk@1192 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -212,7 +212,7 @@
 						<tr>
 							<td nowrap><a target='zwj' href="emoji-zwj-sequences.html">Emoji
 									ZWJ Sequences</a></td>
-							<td>Catalogs <em>emoji zwj sequences</em> that are or will
+							<td>Lists recommended <em>emoji zwj sequences</em> that are or will
 								soon be supported on at least one commonly available platform.
 							</td>
 						</tr>
