git-svn-id: https://unicode.org/repos/unicodetools/trunk@1218 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -378,9 +378,7 @@
 						</tr>
 						<tr>
 							<th><a name='col-name' href='#col-name'>Name</a></th>
-							<td colspan="2">The CLDR short name. The character name may
-								be followed by ≊ plus the CLDR the Unicode character name, if
-								different other than casing.<br>
+							<td colspan="2">The CLDR short name for the character or sequence.<br>
 							<br> Short names vary by language, and are from the CLDR
 								data: values for different languages can be found via <a
 								target='cldr_annotations'
@@ -390,21 +388,16 @@
 						</tr>
 						<tr>
 							<th><a name='col-date' href='#col-date'>Date</a></th>
-							<td colspan="2">In the <a target='full'
-								href="full-emoji-list.html">Full Emoji Data</a> chart, the year
-								the emoji was added to Unicode. A superscript indicates the
+							<td colspan="2">The year
+								the emoji was added to Unicode. With sequences
+								of emoji, the date is for the latest character. A superscript (if present) indicates the
 								source of the character, using the characters from column L of
 								the <a target='tr51'
 								href="../../reports/tr51/proposed.html#Major_Sources">Major
 									Sources</a> table in <em><a target='tr51'
 									href="../../reports/tr51/proposed.html">UTR #51, Unicode
 										Emoji</a></em>, or <em>x</em> for other sources not listed in that
-								table. Where a Unicode character corresponds to multiple
-								sources, multiple superscripts will be present. With sequences
-								of emoji, the date is the latest one.<br> <br>In the <a
-								target='candidates' href="emoji-candidates.html">Emoji
-									Candidates</a> chart, the year and quarter when the candidate was
-								added.
+								table. <br>
 							</td>
 						</tr>
 						<!--
