--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -48,7 +48,7 @@
 				</tr>
 				<tr>
 					<td class="navColCell navColCellPlus" valign="top"><a
-						href="http://www.unicode.org/reports/tr51/index.html">UTS #51,
+						href="%%TR51_HTML%%">UTS #51,
 							Unicode Emoji</a></td>
 				</tr>
 				<tr>
@@ -378,9 +378,9 @@
 						<tr>
 							<th><a name='col-sources' href='#col-sources'>Sources</a></th>
 							<td colspan="2">Compatibility sources listed in the <a target='tr51'
-								href="http://unicode.org/reports/tr51/#Major_Sources">Major
+								href="%%TR51_HTML%%#Major_Sources">Major
 									Sources</a> table in <em><a target='tr51'
-									href="http://unicode.org/reports/tr51/">UTS #51, Unicode
+									href="%%TR51_HTML%%">UTS #51, Unicode
 										Emoji</a></em>.</td>
 						</tr>
 						<!--
