tweak the charts as per ESC discussions
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1252 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -255,11 +255,12 @@
 						</tr>
 						-->
             <tr>
-              <th rowspan="15"><a name='col-vendor' href='#col-vendor'>Apple,
+              <th rowspan="16"><a name='col-vendor' href='#col-vendor'>Apple,
                 …, SB, Sample</a></th>
               <td colspan="2">Images from the respective sources for
                 comparison, listed below.
-                Images for new characters or sequences are highlighted. </td>
+                Images for new characters or sequences are <span class='new'>marked</span>. 
+                Where a skin-tone variant emoji is missing, a small skin-tone swatch is shown. </td>
             </tr>
             <tr>
               <th>Abbr.</th>
@@ -284,6 +285,10 @@
             <tr>
               <td>One</td>
               <td>EmojiOne</td>
+            </tr>
+            <tr>
+              <td>FB</td>
+              <td>Facebook</td>
             </tr>
             <tr>
               <td>FBM</td>
@@ -368,7 +373,10 @@
                 The keywords vary by language, and are from
                 the CLDR data: values for different languages can be found via <a
 								target='cldr_annotations'
-								href="http://unicode.org/cldr/charts/dev/annotations/index.html">CLDR Character Annotations</a>. </td>
+								href="http://unicode.org/cldr/charts/dev/annotations/index.html">CLDR Character Annotations</a>.
+								Provisional keywords and (notes) may be added for <a target='candidates'
+								href="emoji-candidates.html">Emoji Candidates</a> and <a target='released' href="emoji-released.html">Emoji
+                Recently Added</a>.</td>
             </tr>
             <tr>
               <th><a name='col-count' href='#col-count'>Count</a></th>
@@ -378,6 +386,13 @@
               <th><a name='col-emoji' href='#col-emoji'>Emoji</a></th>
               <td colspan="2">A set of emoji characters or sequences, as images. 
                 When copied and pasted into text, they should appear as the underlying characters.</td>
+            </tr>
+            <tr>
+              <th><a name='col-totals' href='#col-totals'>Totals</a></th>
+              <td colspan="2">Totals for a set of characters listed above, using the same layout as in the <a target='tr51'
+								href="%%TR51_HTML%%#Emoji_Counts">Emoji Counts</a> table in <em><a target='tr51'
+									href="%%TR51_HTML%%">UTS #51, Unicode
+                Emoji</a></em>.</td>
             </tr>
           </table>
         </div>
