git-svn-id: https://unicode.org/repos/unicodetools/trunk@1253 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -235,6 +235,12 @@
               <th colspan="2">Description</th>
             </tr>
             <tr>
+              <th><a name='col-group' href='#col-group'>«Group»</a></th>
+              <td colspan="2">The subheaders indicate categories that can be used to organize related emoji together for keyboards.
+              There are both major categories (such as “Smileys &amp; People”) and minor categories (such as “person-gesture”).
+              These categories are broad, and not exclusive: emoji could go into multiple categories.</td>
+            </tr>
+            <tr>
               <th><a name='col-num' href='#col-num'>№</a></th>
               <td colspan="2">A line count, for reference.</td>
             </tr>
@@ -389,7 +395,7 @@
             </tr>
             <tr>
               <th><a name='col-totals' href='#col-totals'>Totals</a></th>
-              <td colspan="2">Totals for a set of characters listed above, using the same layout as in the <a target='tr51'
+              <td colspan="2">Totals for a set of characters listed on the page, using the same layout as in the <a target='tr51'
 								href="%%TR51_HTML%%#Emoji_Counts">Emoji Counts</a> table in <em><a target='tr51'
 									href="%%TR51_HTML%%">UTS #51, Unicode
                 Emoji</a></em>.</td>
