--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -344,7 +344,8 @@
                 data. Values for different languages can be found via <a
 								target='cldr_annotations'
 								href="http://unicode.org/cldr/charts/dev/annotations/index.html"
-								name="Character_Annotations">CLDR Character Annotations</a>. </td>
+								name="Character_Annotations">CLDR Character Annotations</a>.
+								In some of the charts, a ⊛ is prepended to newly-released characters, to allow for "Find in Page".</td>
             </tr>
             <tr>
               <th><a name='col-date' href='#col-date'>Date</a></th>
