tweaks to emoji for charts
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1302 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -90,7 +90,7 @@
           Unicode Emoji</a>, and the annotation and ordering data from the <a
 						target='cldr' href="http://cldr.unicode.org">Unicode CLDR project</a>.
           For a set of slides about emoji, see <a target='emoji_subsite' href='../index.html'>Emoji Slides</a>. </p>
-        <p>These charts are not versioned.
+        <p>These charts are not versioned, and the images and format may be updated at any time.
           For any production usage, the source data files should be
           consulted. For column descriptions, see <a
 								href='#chart_notation'>Chart Notation</a>.</p>
@@ -101,12 +101,12 @@
             </tr>
             <tr>
               <td nowrap><a target='list' href="emoji-list.html">Emoji
-                Data</a></td>
+                List</a></td>
               <td>Emoji characters and sequences for Emoji v%%VERSION%%.</td>
             </tr>
             <tr>
               <td nowrap><a target='full' href="full-emoji-list.html">Full
-                Emoji Data</a></td>
+                Emoji List</a></td>
               <td>Emoji characters and sequences for Emoji v%%VERSION%%, with images from major sources, dates, and keywords. </td>
             </tr>
             <tr>
@@ -136,7 +136,7 @@
 								to winnow down the matches, so <em>:face moon:</em> would match
 								the characters annotated with both “face” and with “moon”. <em>Also
 									in the Annotations column of <a target='full'
-									href="full-emoji-list.html">Full Emoji Data</a>, see <a
+									href="full-emoji-list.html">Full Emoji List</a>, see <a
 									href='#chart_notation'>Chart Notation</a>.
 							</em></td>
 						</tr>
@@ -208,7 +208,7 @@
         <p> In most of the charts, hovering over an image shows the code point
           and name, and clicking on the image goes to the respective row in
           the <a target='full' href="emoji-list.html">Emoji
-          Data</a> chart. Emoji images without available skintone show a small swatch afterwards;
+          List</a> chart. Emoji images without available skintone show a small swatch afterwards;
           those without available images are shown as ✘.
           Each image has the respective character as an “alt”
           value, so copying the image into plain text should (OS permitting)
